# ico-generator

./: Cargo.toml  config.toml  config1.toml  log
src/: config_parser.rs  constant.rs  logger.rs  main.rs  my_macro.rs
