[package]
name = "ico-generator"
version = "0.1.0"
edition = "2018"
authors = ["Afta Dizca Wahana"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rust-embed = "6.0.0"
glob = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.66"
reqwest = {version = "0.11.4", features = ["blocking"]}