[package]
name = "ico-generator"
version = "1.1.0"
edition = "2018"
authors = ["Afta Dizca Wahana"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
image = "0.23.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
reqwest = {version = "0.11.4", features = ["blocking"]}