# cargo-features = ["strip"]

[package]
name = "ico-generator"
version = "1.1.0"
edition = "2018"
authors = ["Afta Dizca Wahana"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
image = "0.23.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
reqwest = {version = "0.11.4", features = ["blocking"]}
terminal-spinners = "0.3.1"
log = "0.4"
log4rs = "1"


[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
# strip = true